--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,12 @@
         "php": ">=5.5.9"
     },
     "autoload": {
-        //文件目录，json文件目录
         "psr-4": {"phpcomposer\\":"src/"}
     },
     "repositories": {
         "packagist": {
             "type": "composer",
-            "url": "https://packagist.phpcomposer.com" //改为国内镜像
+            "url": "https://packagist.phpcomposer.com"
         }
     }
 }
